# simple-usage-monitor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  package-lock.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
src/: main.py  terminal_handler.py
src/data/: README.md  log_reader.py  total_calculator.py
src/session/: session_data.py
src/sumonitor/: config.py  main.py
src/terminal/: buffer_handler.py  terminal_handler.py
src/tokens/: package-lock.json  token_cost_estimator.py
terminal/: terminal_handler.py
tests/: conftest.py  test_buffer_handler.py  test_config.py  test_log_reader.py  test_pricing.py  test_session_data.py  test_session_reset.py  test_session_tracker.py  test_terminal_handler.py  test_token_estimator.py
tokens/: anthropic_est.js  package.json  token_cost_estimator.py
