[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sumonitor"
version = "0.1.0"
dependencies = [
  "pexpect",
  "numpy"
]
requires-python = ">=3.10"
description = "CLI AI Agent wrapper with token and cost tracking"
license = "MIT"

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-timeout>=2.3.0",
  "freezegun>=1.5.0",
  "pytest-xdist>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sumonitor = "main:main"